# Installd

./: index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy-main-website.yml
assets/: index-DJ4A23Fr.css  index-DsXTlJaC.js
main-website/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
main-website/components/: DownloadHub.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ReleaseCard.tsx
main-website/src/: App.vue  constants.ts  style.css  types.ts
main-website/src/components/: DownloadHub.vue  Features.vue  Footer.vue  Hero.vue  Navbar.vue  ReleaseCard.vue
scripts/: sync-version.cjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  foss_db.rs  icon_extractor.rs  lib.rs  main.rs  registry.rs
src/components/: FossLibrary.vue  Settings.vue  Sidebar.vue  SoftwareGrid.vue  TopBar.vue
