[package]
name = "installd"
version = "0.0.1"
description = "Software Remover & FOSS Downloader"
authors = ["Marco"]
edition = "2021"

[lib]
name = "installd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
open = "5"
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Registry"
] }
base64 = "0.22"
image = "0.25"
